<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnEj1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEj1" />

    <Button
        android:id="@+id/btnEj2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEj2" />

    <Button
        android:id="@+id/btnEj3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEj3" />

    <Button
        android:id="@+id/btnEj4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEj4" />
</LinearLayout>